chore: update project configuration for GitHub Pages deployment

--- a/SoftwareDeveloper.html
+++ b/SoftwareDeveloper.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
 
-            <a href="CV_CarmemZavattieri2.html" class="botao-voltar">Voltar à página inicial</a>
+            <a href="index.html" class="botao-voltar">Voltar à página inicial</a>
 
         </div>
     </div>
