--- a/Fibra.html
+++ b/Fibra.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
 
-            <a href="CV_CarmemZavattieri2.html" class="botao-voltar">Voltar à página inicial</a>
+            <a href="index.html" class="botao-voltar">Voltar à página inicial</a>
 
         </div>
     </div>
